<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/ten_dp"
    android:paddingRight="@dimen/ten_dp"
    android:paddingLeft="@dimen/ten_dp"
    android:paddingStart="@dimen/ten_dp"
    android:background="@color/color_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/five_dp"
        android:paddingTop="@dimen/five_dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/sub_icon_first"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:src="@drawable/ic_smoke_free_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/no_smoking"
                android:id="@+id/sub_icon_first_text"
                android:layout_below="@+id/sub_icon_first"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/sub_icon_second"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:src="@drawable/ic_golf_course_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/golf_zone"
                android:id="@+id/sub_icon_second_text"
                android:layout_below="@+id/sub_icon_second"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/sub_icon_third"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:src="@drawable/ic_free_breakfast_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cafe"
                android:id="@+id/sub_icon_third_text"
                android:layout_below="@+id/sub_icon_third"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/sub_icon_fourtn"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:src="@drawable/ic_fitness_center_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fitness_center"
                android:id="@+id/sub_icon_fourtn_text"
                android:layout_below="@+id/sub_icon_fourtn"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/sub_icon_other"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/five_dp"
                android:src="@drawable/ic_exposure_plus_2_black_24dp"/>

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@+id/sub_icon_other"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_more_horiz_black_24dp"/>
        </RelativeLayout>
    </LinearLayout>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@color/color_white_dark"/>

</LinearLayout>