<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_keyboard_backspace_white_36dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notifications_none_white_36dp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/ten_dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:text="@string/navi_columns_meet"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:orientation="horizontal"
        android:background="@color/white_dark"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingTop="@dimen/ten_dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navi_columns_point"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/point_text" />

            <TextView
                android:id="@+id/point_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingBottom="@dimen/ten_dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingTop="@dimen/ten_dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navi_columns_reservation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_below="@+id/reservation_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/reservation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingBottom="@dimen/ten_dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingTop="@dimen/ten_dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navi_columns_sale"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sales_text" />

            <ImageView
                android:id="@+id/sales_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_payment_black_36dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingBottom="@dimen/ten_dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingTop="@dimen/ten_dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navi_columns_select"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/select_text" />

            <ImageView
                android:id="@+id/select_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_favorite_border_black_36dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingBottom="@dimen/ten_dp"/>
        </RelativeLayout>
    </android.support.v7.widget.GridLayout>
</LinearLayout>